--- a/index.html
+++ b/index.html
@@ -891,7 +891,7 @@
         </div>
         <div class="w-full px-4 lg:w-1/2 xl:w-5/12">
           <div class="relative rounded-lg bg-white shadow-lg sm:p-12">
-            <div class="flex justify-center">
+            <div class="flex justify-center p-4">
                 <img class="rounded-md" src="assets/pic/5.jpg" alt="">
             </div>
             
